Bug#33662 - Autoincrement value is not shown in "show create table" Fixed by implementing update_create_info() and returning autoincrement value in the corresponding field in HA_CREATE_INFO structure. The implementation here is identical to that of other engines (innodb, myisam, heap)